---- Changes since 1.430 ----
Added tabs to the module's page page, to switching between user and group lists easier.
Cleaned up the user interface to be more consistent with the rest of Webmin.
Improved support for default password changing options on AIX.
---- Changes since 1.440 ----
Added a non-editable list of users who have this group as their primary to the Edit Group page.
Added a Module Config option to use a text box for entering secondary group members, rather than the left/right user chooser.
Created a page for exporting groups to a batch file, for importing on other systems.
Added support for creating, deleting and modifying groups from a batch file. This is similar to the long-standing batch user management functionality.
Added support for Blowfish password hashing, which can be enabled on the Module Config page. On Solaris systems, it will be used if enabled in /etc/security/policy.conf. Requires the Crypt::Eksblowfish::Bcrypt Perl module though.
Converted commands in the module's API file to POD format, and added more details about each function.
---- Changes since 1.470 ----
Fixed a bug that caused an empty shell to appear in the shells list for new users.
Fixed the hashing format for Blowfish passwords, to put $2a$ at the start instead of $2$.
On Linux systems with SElinux enabled, the context user_u:object_r:user_home_dir_t is set on new home directories by default.
---- Changes since 1.510 ----
When deleting a user's personal group and user deletion in other modules is enabled, delete the group in other modules too.
---- Changes since 1.530 ----
Added support for SHA512 format passwords.
---- Changes since 1.540 ----
Fixed an XSS vulnerability that can be triggered if an attacker has the ability to change the real name of a Unix user.
---- Changes since 1.550 ----
Updated all links to users and groups to be by name instead of by index, to avoid incorrect links if the passwd or group files are changed manually or by another Webmin session.